[tool.poetry]
name = "twitter"
version = "0.1.0"
description = ""
authors = ["stav <stav@everthere.co>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
tweety = "^0.1.6"
requests = "^2.25.1"
bs4 = "^0.0.1"
pytesseract = "^0.3.7"
textrazor = "^1.4.0"
google-auth-oauthlib = "^0.4.4"
Django = "^3.2"
tweepy = "^3.10.0"
google-api-python-client = "^2.2.0"
oauth2client = "^4.1.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
